# FalconBroom

./: .env.sample  .gitattributes  .gitignore  Dockerfile  Makefile  PRIVACY.md  README.md  README_SESSIONS.md  RELEASE_CHECKLIST.md  RENDER_DEPLOY.md  check_syntax.py  design.md  fixed_out.csv  import_test.py  output_from_text.csv  package-lock.json  preview.json  pytest_multi_out.txt  recipe.json  recipe_for_e30903e3.json  requirements.txt
data/: last_refresh.txt  tmp_impute_test.csv  tmp_impute_test2.csv  tmp_replace_out_check.csv  tmp_replace_test.csv
deploy/: INSTALL_SYSTEMD.md  falconbroom.service
fbroom/: __init__.py  cli.py  connectors.py  engine.py  ingest.py  main.py  recipe_schema.py  workflow_rules.py
frontend/: index.html  package-lock.json  package.json
samples/: demo_recipe.json
scripts/: README.md  call_debug_endpoint.py  check_infer.py  clear_test_data.ps1  convert_pyspy.py  create_sanitized_demo.ps1  create_sanitized_zip.ps1  debug_capitalize.py  debug_impute_small.py  debug_move_preview.py  debug_multi_cast.py  debug_numeric_transform.py  debug_preview_multi.py  debug_preview_test.py  debug_recipe_diagnostics.py  debug_recipe_for_normalize.py  debug_recipe_generation.py  debug_recipe_test.py  debug_reg.py  debug_swap.py  decode_refresh.py  generate_test_csvs.py  health_retry.ps1  inspect_cast.py  kill_port_3009.ps1  kill_port_3009.py  move_demo_to_samples.ps1  print_module_path.py  print_time.py  rekey.py  run_normalize_tests.py  run_uvicorn_direct.ps1  run_uvicorn_direct.sh  (+19 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+375 files in other folders)
