[package]
name = "falconbroom-tauri"
version = "0.1.0"
authors = ["FalconBroom"]
edition = "2021"

[dependencies]
tauri = { version = "1.4.2", features = ["api-all"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
