[package]
name = "falconbroom-tauri"
version = "0.1.0"
authors = ["FalconBroom"]
edition = "2021"
build = "build.rs"

[package.metadata]

[package.metadata.tauri]

[package.metadata.tauri-winres]

[dependencies]
tauri = { version = "2.10.0", features = [] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
